cursive-bootstrap/tests/ui/E-TYP/E-TYP-1922.cursive
// RUN: compile-fail
// DIAG: E-TYP-1922
// SPEC: 8.15
// DESC: Enum discriminant must be non-negative

enum Bad {
    A = -1  //~ ERROR E-TYP-1922: discriminant negative
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
